feat: rename repository classes and update package structure for improved organization