@@ -1,10 +1,12 @@
-package com.projecthub.repository.csv.helper;
+package com.projecthub.core.repositories.csv.helper;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 
 public class CsvFileHelper {
 
@@ -17,8 +19,8 @@ public class CsvFileHelper {
      * @throws IOException if an I/O error occurs during backup
      */
     public static void backupCSVFile(String filePath) throws IOException {
-        Path source = Paths.get(filePath);
-        Path backup = Paths.get(filePath + ".backup");
+        Path source = Path.of(filePath);
+        Path backup = Path.of(filePath + ".backup");
         Files.copy(source, backup, StandardCopyOption.REPLACE_EXISTING);
         logger.info("Backup created for file: {}", filePath);
     }
